--- a/WoofRunner/Storyboards/Main.storyboard
+++ b/WoofRunner/Storyboards/Main.storyboard
@@ -1,26 +1,160 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J4N-5P-slD">
+    <device id="ipad12_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Cei-gA-s71"/>
-                        <viewControllerLayoutGuide type="bottom" id="O1X-57-Ctf"/>
-                    </layoutGuides>
+                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <sceneKitView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </sceneKitView>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-823" y="129"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="IPo-Qv-boX">
+            <objects>
+                <viewController id="J4N-5P-slD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c22-Pv-Vzc"/>
+                        <viewControllerLayoutGuide type="bottom" id="dbh-9l-uTV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EJb-Do-VSF">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L9I-Cb-TRe">
+                                <rect key="frame" x="233" y="185" width="219" height="37"/>
+                                <color key="backgroundColor" red="0.051249672377467914" green="0.035249272705756285" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="31"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="Level Selector">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="zyz-Iu-yTg" kind="show" id="5kZ-G0-szW"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k57-nM-Rbe">
+                                <rect key="frame" x="229" y="309" width="228" height="37"/>
+                                <color key="backgroundColor" red="0.0" green="0.39603822969543145" blue="0.13566270438175634" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="31"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="Level Designer">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="SdE-PE-Oyu" kind="show" id="K68-rd-5rt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iq1-Zh-t6c">
+                                <rect key="frame" x="217" y="452" width="277" height="37"/>
+                                <color key="backgroundColor" red="0.39603822969543145" green="0.012706806612731837" blue="0.002712131056308477" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="31"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="Level Marketplace">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="cme-Th-e6A" kind="show" id="gUd-5p-JT8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z00-5l-a6F">
+                                <rect key="frame" x="271" y="598" width="162" height="37"/>
+                                <color key="backgroundColor" red="0.3400110977465598" green="0.0" blue="0.48106361040609136" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="31"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="Gameplay">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="uKa-jB-w5U" kind="show" id="at2-VF-ZBC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmG-ae-6aZ">
+                                <rect key="frame" x="304" y="702" width="97" height="37"/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="31"/>
+                                <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" title="Menu">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="GQ9-AU-CvF" kind="show" id="jkw-kV-GwM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Iq1-Zh-t6c" firstAttribute="top" secondItem="k57-nM-Rbe" secondAttribute="bottom" constant="106" id="0ud-tM-uND"/>
+                            <constraint firstItem="gmG-ae-6aZ" firstAttribute="top" secondItem="Z00-5l-a6F" secondAttribute="bottom" constant="67" id="3cb-hy-z6C"/>
+                            <constraint firstItem="L9I-Cb-TRe" firstAttribute="top" secondItem="c22-Pv-Vzc" secondAttribute="bottom" constant="165" id="8C5-BK-Tib"/>
+                            <constraint firstItem="Z00-5l-a6F" firstAttribute="top" secondItem="Iq1-Zh-t6c" secondAttribute="bottom" constant="109" id="DyG-Sw-iz4"/>
+                            <constraint firstItem="gmG-ae-6aZ" firstAttribute="leading" secondItem="EJb-Do-VSF" secondAttribute="leadingMargin" constant="284" id="XOq-DM-99Y"/>
+                            <constraint firstItem="Z00-5l-a6F" firstAttribute="leading" secondItem="EJb-Do-VSF" secondAttribute="leading" constant="271" id="YaP-zX-GnQ"/>
+                            <constraint firstItem="k57-nM-Rbe" firstAttribute="top" secondItem="L9I-Cb-TRe" secondAttribute="bottom" constant="87" id="bD6-ik-oEv"/>
+                            <constraint firstItem="L9I-Cb-TRe" firstAttribute="leading" secondItem="EJb-Do-VSF" secondAttribute="leadingMargin" constant="213" id="hwR-IV-DoS"/>
+                            <constraint firstItem="k57-nM-Rbe" firstAttribute="leading" secondItem="EJb-Do-VSF" secondAttribute="leading" constant="229" id="n0y-6h-FZt"/>
+                            <constraint firstItem="Iq1-Zh-t6c" firstAttribute="leading" secondItem="EJb-Do-VSF" secondAttribute="leading" constant="217" id="qHZ-TE-djE"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yd0-dA-WI6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="442.96874999999994" y="128.69692532942898"/>
+        </scene>
+        <!--LevelSelector-->
+        <scene sceneID="CPU-eY-65b">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LevelSelector" id="zyz-Iu-yTg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Q0-LY-lCo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1226" y="-33"/>
+        </scene>
+        <!--LevelDesigner-->
+        <scene sceneID="buf-Eo-Qu8">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LevelDesigner" id="SdE-PE-Oyu" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="InZ-rK-IyA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1278" y="132"/>
+        </scene>
+        <!--LevelMarketplace-->
+        <scene sceneID="8li-k8-RSj">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LevelMarketplace" id="cme-Th-e6A" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dj9-h8-O9x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1280" y="192"/>
+        </scene>
+        <!--Menu-->
+        <scene sceneID="ZP7-bu-wfj">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Menu" id="GQ9-AU-CvF" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YDB-vG-EXH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="941" y="365"/>
+        </scene>
+        <!--Gameplay-->
+        <scene sceneID="syV-ZU-25E">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Gameplay" id="uKa-jB-w5U" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xMz-FD-W2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1272" y="375"/>
         </scene>
     </scenes>
 </document>
