--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -20,12 +20,27 @@
                     <view key="view" contentMode="scaleToFill" id="J27-B6-sXy">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please login with Facebook" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5F-TJ-JcR">
+                                <rect key="frame" x="320" y="614" width="385" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="F5F-TJ-JcR" firstAttribute="centerX" secondItem="J27-B6-sXy" secondAttribute="centerX" id="61c-ax-Gal"/>
+                            <constraint firstItem="F5F-TJ-JcR" firstAttribute="centerY" secondItem="J27-B6-sXy" secondAttribute="centerY" constant="-50" id="So0-BV-JFi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginPrompt" destination="F5F-TJ-JcR" id="Wh4-wj-r0M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Qs-yx-dew" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="110" y="148"/>
+            <point key="canvasLocation" x="109.5703125" y="147.58418740849194"/>
         </scene>
     </scenes>
 </document>
