Implement downloaded/created levels UI

--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please login with Facebook" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5F-TJ-JcR">
-                                <rect key="frame" x="320" y="579.5" width="385" height="38.5"/>
+                                <rect key="frame" x="319.5" y="579" width="385" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -72,8 +72,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marketplace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gd-u4-owz">
-                                <rect key="frame" x="464.5" y="673" width="95" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFQ-cG-dsx">
+                                <rect key="frame" x="87" y="633" width="350" height="100"/>
+                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="350" id="KMQ-Ww-OTm"/>
+                                    <constraint firstAttribute="height" constant="100" id="Ttz-eN-jLx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Downloaded Levels">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="navigateToDownloadedGames:" destination="tdJ-zR-Q21" eventType="touchUpInside" id="IbT-KK-uRg"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHh-36-21e">
+                                <rect key="frame" x="587" y="633" width="350" height="100"/>
+                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="TOx-2p-CLU"/>
+                                    <constraint firstAttribute="width" constant="350" id="me6-uQ-PL6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Created Levels">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="navigateToCreatedGames:" destination="tdJ-zR-Q21" eventType="touchUpInside" id="jmI-V5-IlW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zHh-36-21e" firstAttribute="centerY" secondItem="lpb-qU-kRV" secondAttribute="centerY" id="7yk-cm-7Bn"/>
+                            <constraint firstItem="TFQ-cG-dsx" firstAttribute="centerX" secondItem="lpb-qU-kRV" secondAttribute="centerX" constant="-250" id="PxL-Sf-fNI"/>
+                            <constraint firstItem="zHh-36-21e" firstAttribute="centerX" secondItem="lpb-qU-kRV" secondAttribute="centerX" constant="250" id="bQt-zB-Rof"/>
+                            <constraint firstItem="zHh-36-21e" firstAttribute="height" secondItem="TFQ-cG-dsx" secondAttribute="height" id="hfi-JB-aFM"/>
+                            <constraint firstItem="TFQ-cG-dsx" firstAttribute="centerY" secondItem="lpb-qU-kRV" secondAttribute="centerY" id="ofN-rJ-Pf6"/>
+                            <constraint firstItem="zHh-36-21e" firstAttribute="width" secondItem="TFQ-cG-dsx" secondAttribute="width" id="qak-VY-QNY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="cfW-Iz-XGc" kind="show" identifier="segueToLevelList" id="ugq-hu-UUo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q6k-qC-jbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="934.57031249999989" y="152.8550512445095"/>
+        </scene>
+        <!--Level Marketplace List View Controller-->
+        <scene sceneID="orO-6s-rNo">
+            <objects>
+                <viewController id="cfW-Iz-XGc" customClass="LevelMarketplaceListViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LyJ-Hq-vzb"/>
+                        <viewControllerLayoutGuide type="bottom" id="bUL-qn-gm8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hLB-f4-TU5">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITZ-8h-tl2">
+                                <rect key="frame" x="491" y="672.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -81,14 +142,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3Gd-u4-owz" firstAttribute="centerX" secondItem="lpb-qU-kRV" secondAttribute="centerX" id="FVz-xs-hKN"/>
-                            <constraint firstItem="3Gd-u4-owz" firstAttribute="centerY" secondItem="lpb-qU-kRV" secondAttribute="centerY" id="qnp-gE-Qw8"/>
+                            <constraint firstItem="ITZ-8h-tl2" firstAttribute="centerY" secondItem="hLB-f4-TU5" secondAttribute="centerY" id="3VM-WG-xMk"/>
+                            <constraint firstItem="ITZ-8h-tl2" firstAttribute="centerX" secondItem="hLB-f4-TU5" secondAttribute="centerX" id="PVX-mt-oGv"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="viewTitle" destination="ITZ-8h-tl2" id="pmG-Na-QYh"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Q6k-qC-jbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OU0-TL-YvJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="934.57031249999989" y="152.8550512445095"/>
+            <point key="canvasLocation" x="1778" y="151"/>
         </scene>
     </scenes>
 </document>
