Add collection view to level marketplace level list

--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -139,11 +139,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vas-iU-AXi">
+                                <rect key="frame" x="0.0" y="88.5" width="1024" height="1277.5"/>
+                                <connections>
+                                    <segue destination="jC7-Um-Iho" kind="embed" id="5vy-FN-gP7"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Vas-iU-AXi" firstAttribute="top" secondItem="ITZ-8h-tl2" secondAttribute="bottom" constant="20" id="FCD-J3-9Xt"/>
                             <constraint firstItem="ITZ-8h-tl2" firstAttribute="centerX" secondItem="hLB-f4-TU5" secondAttribute="centerX" id="PVX-mt-oGv"/>
+                            <constraint firstAttribute="bottom" secondItem="Vas-iU-AXi" secondAttribute="bottom" id="nP4-YM-d1n"/>
+                            <constraint firstAttribute="trailing" secondItem="Vas-iU-AXi" secondAttribute="trailing" id="sAx-Ex-02L"/>
                             <constraint firstItem="ITZ-8h-tl2" firstAttribute="top" secondItem="LyJ-Hq-vzb" secondAttribute="bottom" constant="10" id="tRL-RR-3m0"/>
+                            <constraint firstItem="Vas-iU-AXi" firstAttribute="leading" secondItem="hLB-f4-TU5" secondAttribute="leading" id="ukm-AF-Dlw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -152,7 +162,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OU0-TL-YvJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1778" y="151"/>
+            <point key="canvasLocation" x="1777.7343749999998" y="150.65885797950219"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Qk3-d5-cMf">
+            <objects>
+                <viewController id="jC7-Um-Iho" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xoi-4S-Qrb">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1277.5"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JEz-TO-gBX">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OCs-W3-1uL">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                    </collectionView>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="og1-3m-h13" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2631" y="153"/>
         </scene>
     </scenes>
 </document>
